# sanitiser

./: .gitignore  .pre-commit-config.yaml  CHANGES.txt  HISTORY.md  README.md  pyproject.toml
src/sanitiser/: __init__.py  handle_links.py  sanitise_words.py
tests/: test_sanitise_words.py  test_strip_links.py  test_version_match.py
